[gd_scene load_steps=4 format=3 uid="uid://c6qu6w8mno7cv"]

[ext_resource type="Texture2D" uid="uid://d3r761tq1hshb" path="res://Assets/UI/SolidPanelMenu.png" id="1_6n2nj"]
[ext_resource type="Script" path="res://Scripts/UI/nano_reinforcment_button.gd" id="1_a0r4t"]
[ext_resource type="Texture2D" uid="uid://yd57sk3mm6fr" path="res://Assets/UI/NanoReinforcement.png" id="2_0flqt"]

[node name="NanoReinforcmentButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0r4t")

[node name="SolidPanelMenu" type="Sprite2D" parent="."]
position = Vector2(33, 47)
scale = Vector2(0.05, 0.09)
texture = ExtResource("1_6n2nj")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 65.0
offset_bottom = 88.0
texture_normal = ExtResource("2_0flqt")
ignore_texture_size = true
stretch_mode = 3

[node name="Count" type="Label" parent="TextureButton"]
layout_mode = 0
offset_left = 40.0
offset_top = 58.0
offset_right = 65.0
offset_bottom = 84.0
text = "1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="CDTimer" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 29.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0.764706, 0.32549, 1)
text = "0"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -4.0
offset_top = -26.0
offset_right = 70.0
text = "Reinforce"
horizontal_alignment = 1

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
